--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,230 +1,69 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family:sans-serif;
-}
-.swal2-icon.swal2-warning {
-    border-color: #ff0000!important;
-    color: #ff0000!important;
-}
-.swal2-title{
-    color: black!important;
-}
-header{
+.navbar{
+    width: 100%;
+    padding: 20px 6%;
+    display: flex;
+    justify-content: space-between;
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
+    font-size: 14px;
+    color: #e5e5e5;
+    background-image: linear-gradient(180deg, rgba(0,0,0,0.7) 10%, transparent);
+    z-index: 1;
+}
+
+.navbar-left{
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding: 20px 50px;
-    background-color:rgba(0, 0, 0, 0.42);
-    z-index: 10000;
-    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+    gap: 50px;
 }
-.navigaition{
+.navbar-left img{
+    width: 90px;
+}
+.navbar-left ul{
     display: flex;
-}
-.navigaition li{
     list-style: none;
-    margin: 0px 10px;
+    gap: 20px;
 }
-.navigaition li a{
-    color: white;
-    text-decoration: none;
-    font-weight: 800;
-    letter-spacing: 1px;
+.navbar-left ul li{
+    cursor: pointer;
 }
-.navigaition li:hover a{
-    color: red;
-    font-weight: 900;
-    text-decoration: none;
-}
-.search{
-    position: relative;
-    width: 300px;
-    height: 40px;
-}
-.search input{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    color: white;
-    background: transparent;
-    border: 1px solid rgba(255, 255, 255, 0.5);
-    outline: none;
-    padding: 0px 10px 0px 45px;
-    backdrop-filter: blur(15px);
-    border-radius: 5px;
-}
-.search input::placeholder{
-    color: white;
-}
-.banner{
-    position: relative;
-    width: 100%;
-    min-height: 100vh;
-    padding: 0px 100px;
+
+.navbar-right{
     display: flex;
-    justify-content: flex-start;
+    gap: 20px;
     align-items: center;
 }
-.banner .bg{
-   position: fixed;
-   top: 0;
-   left: 0;
-   width: 100%;
-   height: 100%;
-   object-fit: cover;
+.navbar-right .icons{
+    width: 20px;
+    cursor: pointer;
 }
-.content{
-    position: relative;
-    z-index: 0;
-    max-width: 550px;
-}
-.banner .content h4{
-    color: rgba(255, 255, 255, 0.5);
-    font-weight: 500;
-}
-.banner .content h4 span{
-padding: 0px 10px;
-border-right: 1px solid rgba(255, 255, 255, 0.5);
-}
-.banner .content h4 span:first-child{
-padding-left: 0;
-}
-.banner .content h4 span:last-child{
-    border-right: none;
-}
-.banner .content h4 span i{
-    background-color: red;
-    color: white;
-    padding: 0px 8px;
-    display: inline-block;
-    font-style: normal;
+.navbar-right .profile{
     border-radius: 4px;
+    width: 35px;
 }
-.banner .content p{
-    font-size: 1em;
-    font-weight: 300;
-    line-height: 1.5em;
-    color: white;
-    margin: 10px 0 10px;
-}
-.buttons{
-    width: 200px;
+.navbar-profile{
     display: flex;
-    justify-content: space-between;
-}
-.Mycarts{
-    margin-top: -150px;
-    background-color: #000000ed;
-    box-shadow: rgb(0 0 0) 0px -10px 50px 30px;
-}
-.usericon{
-    position: absolute;
-    font-size: 40px;
-    right: 0;
+    align-items: center;
+    gap: 10px;
     cursor: pointer;
+    position: relative;
 }
-#usericon{
-    position: absolute;
-    right: 0;
-    width:40px;
-    height:40px;
-    border: 3px solid red;
-    border-radius:50%;
-    cursor: pointer;
-}
-@media screen and (min-width:0px) and (max-width:1100px) {
-    header{
-        padding: 5px 20px;
-        box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 54px 19px;
-        background-color:rgba(0, 0, 0, 0.51);
-    }
-    .search input{
-        padding: 0px;
-        left: -50px;
-    }
-}
-@media screen and (min-width:0px) and (max-width:900px) {
-.navigaition li:nth-child(4) a{
+.navbar .dropdown{
     display: none;
+    position: absolute;
+    top: 100%;
+    right: 0;
+    width: max-content;
+    background: #191919;
+    padding: 18px 22px;
+    border-radius: 2px;
+    text-decoration: underline;
+    z-index: 1;
 }
-.search{
-    width: 200px;
+.navbar .dropdown .p{
+    font-size: 13px;
+    cursor: pointer;
 }
-.search input{
-    left: -40px;
-}
-}
-@media screen and (min-width:0px) and (max-width:650px) {
-    .navigaition{
-        display: none;
-    }
-    .search{
-        width: 150px;
-    }
-    header{
-        padding: 10px;
-    }
-    .banner{
-        padding: 100px 20px;
-        min-height: 55vh;
-    }
-    .Mycarts{
-        margin-top: -60px;
-    }
-    .usericon{
-        display: none;
-    }
-    #usericon{
-        display: none;
-    }
-    .search input{
-        left: 0;
-    }
-}
-@media screen and (min-width:0px) and (max-width:500px) {
-    .content{
-        display: none;
-    }
-    .banner .bg{
-        height: auto;
-        object-fit: contain;
-        top:59px;
-    }
-    .Mycarts{
-        padding-bottom: 50px;
-        margin-top: -20px;
-    }
-}
-@media screen and (min-width:0px) and (max-width:450px) {
-    .Mycarts{
-        margin-top: -70px;
-    }
-    .banner {
-        min-height: 39vh;
-    }
-    
-    
-}
-@media screen and (min-width:0px) and (max-width:400px) {
-    .Mycarts{
-        margin-top: -40px;
-    }
-}
-@media screen and (min-width:0px) and (max-width:360px) {
-    .Mycarts{
-        margin-top: -55px;
-    }
-}
-@media screen and (min-width:0px) and (max-width:300px) {
-    .Mycarts{
-        margin-top: -55px;
-    }
+
+.navbar-profile:hover .dropdown{
+    display: block;
 }
